<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shoppingCart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_shoppingCart" />

    <item
        android:id="@+id/navigation_userprofile"
        android:icon="@drawable/ic_baseline_face_24"
        android:title="@string/title_userprofile" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_baseline_format_list_numbered_24"
        android:title="@string/title_orders" />


    <item
        android:id="@+id/navigation_coffee_assistant"
        android:icon="@drawable/ic_baseline_assistant_24"
        android:title="@string/title_coffee_assistant_wizard" />
</menu>