<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_account_background_gradient"
    tools:context=".Pages.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginImageTitleTop"
            android:layout_width="129dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/loginImgContentDescription"
            android:src="@drawable/login1" />

        <TextView
            android:id="@+id/loginPageTitle"
            android:layout_width="118dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="cursive"
            android:inputType="text"
            android:text="@string/loginPageTitle"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/loginEmailIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_email_black_48dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEmailTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="6"
                android:hint="@string/loginEmailTextfieldHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmailTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/loginPasswprdIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_lock_black_48dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPasswordText"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="6"
                android:hint="@string/loginPasswordTextfieldHint"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorLightBrown"
            android:text="@string/btn_loginPage_title"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/register_text_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="Creat new account"
            android:textAllCaps="false"
            android:textColor="#FF9800"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp" />
    </LinearLayout>
</RelativeLayout>