<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_account_background_gradient"
    tools:context=".Pages.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/registerImageTitleTop"
            android:layout_width="129dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/registerImgContentDescription"
            android:src="@drawable/login1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registerPageTitle"
            android:layout_width="118dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:ems="10"
            android:fontFamily="cursive"
            android:inputType="text"
            android:text="@string/registerPageTitle"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.371" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/registerEmailIcon"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_email_black_48dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerEmailText"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="6"
                android:hint="@string/loginEmailTextfieldHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerEmailTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/registerPasswprdIcon"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_lock_black_48dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerPasswordText"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="6"
                android:hint="@string/loginPasswordTextfieldHint"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerPasswordTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorLightBrown"
            android:text="@string/btn_registerPage_title"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/login_text_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="User exists? Login"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp" />
    </LinearLayout>
</RelativeLayout>